# nerf

./: LICENSE  README.md  changelog  nerf-chain.cabal  nerf.cabal  package.yaml  stack.yaml
NLP/: Nerf.hs
NLP/Nerf/: Dict.hs  Schema.hs  Tokenize.hs  Types.hs
NLP/Nerf/Dict/: Base.hs  LMF.hs  NELexicon.hs  PNEG.hs  PNET.hs  Prolexbase.hs
example/: train.nes
src/NLP/: Nerf.hs
src/NLP/Nerf/: Compare.hs  Dict.hs  ID.hs  NeSet.hs  Offset.hs  PolEval.hs  Schema.hs  Server.hs  Sync.hs  TEI.hs  TEINKJP.hs  Tokenize.hs  Types.hs  Utils.hs  XCES.hs  XCES2.hs
src/NLP/Nerf/Dict/: Base.hs  PNEG.hs  PNET.hs  Prolexbase.hs
src/NLP/Nerf/TEI/: Tag.hs
src/NLP/Nerf/Tree/: Alpha.hs  Grammar.hs  PQ.hs  PQueue.hs  PosMap.hs  Types.hs
src/NLP/Nerf/Tree/Alpha/: Closed.hs  Generic.hs  Node.hs  Open.hs  Phi.hs
tools/: nerf-chain.hs  nerf.hs
